--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.25rem;
+    padding: 0 1.25rem;
     &__logo{
-        height: 46px;
+        height: 85px;
         object-fit: contain;
     }
 }
