--- a/src/pages/ProfileCreation/ProfileCreation.scss
+++ b/src/pages/ProfileCreation/ProfileCreation.scss
@@ -1,3 +1,5 @@
+@use "../../styles/partials/mixins" as *;
+
 h1{
     color: black;
     font-family: "Alegreya Sans SC";
@@ -7,4 +9,37 @@ h1{
     width: 100%;
     height: 100vh;
     padding: 1rem;
+    // @include tablet{
+    //     padding: 0 5rem;
+    // }
+    // @include desktop{
+    //     display: flex;
+        
+    //     align-items: center;
+    //     flex-direction: column;
+    // }
+    &__title{
+        padding-top: 1.5rem;
+        padding-bottom: 1rem;
+    }
+    &__question{
+        padding-top: 1.5rem;
+        padding-bottom: .625rem;
+    }
+}
+
+button{
+    background-color: white;
+    border-radius: 14px;
+    padding: 4px;
+    border: none;
+    margin: 1px;
+}
+button:active{
+    background-color: black;
+    color: white;
+}
+button:hover{
+    background-color: black;
+    color: white;
 }
