add name, photo, and question pages

--- a/src/pages/ProfileCreation/ProfileCreation.scss
+++ b/src/pages/ProfileCreation/ProfileCreation.scss
@@ -41,3 +41,9 @@ button:hover{
     background-color: black;
     color: white;
 }
+
+.next{
+    display: flex;
+    justify-content: flex-end;
+    
+}
