added the logo to each page

--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -3,3 +3,7 @@
     src: url(../../assets/Fonts/AlegreyaSansSC-Black.ttf) format("truetype");
     font-weight: 400;
 }
+@font-face {
+    font-family: "Galano Grotesque";
+    src: url(../../assets/Fonts/GalanoGrotesqueAltRegular.otf) format("opentype");
+}
