--- a/src/pages/Name/Name.scss
+++ b/src/pages/Name/Name.scss
@@ -7,13 +7,14 @@
         color:black;
         padding-top: 0.5rem;
         padding-bottom: 11rem;
-        font-family: sans-serif;
+        font-family: "Galano Grotesque";
     }
     &__input{
         width: 100%;
         height: 2.6875rem;
         border-radius: 10px;
         border: none;
+        padding: .625rem;
         margin-bottom: 16rem;
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
