--- a/src/pages/ProfileCreation/ProfileCreation.scss
+++ b/src/pages/ProfileCreation/ProfileCreation.scss
@@ -9,16 +9,10 @@ h1{
     width: 100%;
     height: 100vh;
     padding: 1rem;
-    // @include tablet{
-    //     padding: 0 5rem;
-    //     height: 100vh;
-    // }
-    // @include desktop{
-    //     height: 100vh;
-    // }
     &__title{
         padding-top: 1.5rem;
         padding-bottom: 1rem;
+        font-weight: 900;
     }
     &__question{
         padding-top: 1.5rem;
@@ -46,4 +40,7 @@ button:hover{
     display: flex;
     justify-content: flex-end;
     
+}
+p{
+    padding-bottom: 2.125rem;
 }
