created start folder

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -23,3 +23,11 @@
     position: absolute;
     bottom: 10px;
 }
+
+button{
+    background-color: white;
+    border-radius: 14px;
+    padding: 4px;
+    border: none;
+    margin: 1px;
+}
