--- a/src/pages/Name/Name.scss
+++ b/src/pages/Name/Name.scss
@@ -1,8 +1,13 @@
+@use '../../styles/partials/mixins' as *;
+
 .name{
     padding: 0 1rem;
     background-color: #f57f5b;
     width: 100%;
     height: 100vh;
+    @include tablet{
+        padding: 0 12rem;
+    }
     &__question{
         color:black;
         padding-top: 0.5rem;
