--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,7 +1,35 @@
 
+// span{
+//     color: rgb(4, 1, 75);
+//     font-size: 23px;
+// }
+
 .home{
+    width: 100%;
 &__title{
-    font-family: "Galano Grotesque"
+    font-family: "Galano Grotesque";
+    color:white;
+    font-size: 50px;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+}
+&__header{
+    background-color: #ec6408;
+    color: white;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+    height: 18.375rem;
+    padding: 0 .3125rem;
+}
+&__logo{
+    height: 85px;
+    object-fit: contain;
+}
+&__title-section{
+    display: flex;
+    align-items: center;
+}
+&__button{
+ margin-top: 100px;
 }
 }
 .card{
@@ -15,6 +43,8 @@
     padding: 0.375rem;
     transform: rotate(-15deg);
     width: 11.5rem;
+    margin-right: 2rem;
+    margin-top: 3rem;
 }
 &__visuals{
     border-radius: 1.5rem;
@@ -39,9 +69,32 @@
     margin-bottom: 0.5rem;
 }
 }
-.row__one{
-    animation: first-row-flow-2ccf70a2 10s linear infinite;
-}
 .card__mobile-container{
     display: flex;
+}
+.row{
+&__one{
+    display: flex;
+    animation: slide 25s linear infinite;
+}
+}
+.row__two{
+    display: flex;
+    animation-direction: reverse;
+    animation: slide 25s linear infinite;
+}
+@keyframes slide {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
+.button-section{
+    background-color: #035c88;
+    margin-top: 3rem;
+    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
+    height: 18.375rem;
 }
