--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,6 +6,7 @@
 
 .home{
     width: 100%;
+    
 &__title{
     font-family: "Galano Grotesque";
     color:white;
@@ -18,7 +19,7 @@
     color: white;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
     height: 18.375rem;
-    padding: 0 .3125rem;
+    padding: 0 0.7rem;
 }
 &__logo{
     height: 85px;
@@ -30,6 +31,17 @@
 }
 &__button{
  margin-top: 100px;
+ width: 100%;
+ height: 40px;
+ font-size: 17px;
+ border-radius: 25px;
+ border: 2px solid #035c88;
+ color: #ec6408;
+ background-color: white;
+ font-family: "Alegreya Sans SC";
+}
+&__sub-title{
+    padding:0 1rem;
 }
 }
 .card{
@@ -97,4 +109,5 @@
     margin-top: 3rem;
     clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
     height: 18.375rem;
+    padding: 1rem;
 }
