--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,6 +1,62 @@
 .login{
-    padding: 0 1rem;
+    padding: 1rem;
     background-color: #f57f5b;
     width: 100%;
     height: 100vh;
+    &__card{
+        border: 1px solid #035c88;
+        background-color: white;
+        max-width: none;
+        width: 100%;
+    }
+    &__title{
+        display: flex;
+        justify-content: center;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+    &__input{
+        border-radius: 19px;
+        height: 36px;
+        padding: 1rem;
+        border: 1px solid #035c88;
+        margin-bottom: .75rem;
+    }
+    &__button{
+        border: none;
+        width: 100%;
+        margin-top: .625rem;
+        height: 37px;
+        border-radius: 19px;
+        background-color: #035c88;
+        color: white;
+        font-weight: 700;
+    }
+    &__logo{
+        height: 85px;
+        object-fit: contain;
+    }
+    &__header{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1rem;
+    }
+    &__subtitle{
+        font-weight: 500;
+    }
+    &__question{
+        padding-top: 2rem;
+        display: flex;
+        justify-content: center;
+        font-weight: 500;
+    }
+    &__login{
+        color: black;
+    }
+}
+#email,
+#password,
+#password-confirm {
+    display: flex;
+    flex-direction: column;
 }
