--- a/src/pages/SignIn/SignIn.scss
+++ b/src/pages/SignIn/SignIn.scss
@@ -8,7 +8,6 @@
         background-color: white;
         max-width: none;
         width: 100%;
-        height: 52vh;
     }
     &__title{
         display: flex;
@@ -50,6 +49,9 @@
         display: flex;
         justify-content: center;
         font-weight: 500;
+    }
+    &__login{
+        color: black;
     }
 }
 #email,
