--- a/src/pages/ProfileCreation/ProfileCreation.scss
+++ b/src/pages/ProfileCreation/ProfileCreation.scss
@@ -9,6 +9,9 @@ h1{
     width: 100%;
     height: 100vh;
     padding: 1rem;
+    @include tablet{
+        padding: 0 7rem;
+    }
     &__title{
         padding-top: 1.5rem;
         padding-bottom: 1rem;
@@ -27,7 +30,7 @@ h1{
     border: none;
     margin: 1px;
 }
-.profile__button:active{
+.profile__button.selected{
     background-color: black;
     color: white;
 }
