--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -3,4 +3,26 @@
     background-color: #f57f5b;
     width: 100%;
     height: 100vh;
+    &__photo{
+        border-radius: 10px;
+        border: 2px solid #035c88;
+        
+    }
+    &__header{
+        display: flex;
+        align-items: center;
+    }
+    &__button{
+        border: none;
+        width: 18rem;
+        margin-top: .625rem;
+        height: 37px;
+        border-radius: 19px;
+        background-color: #035c88;
+        color: white;
+        font-weight: 700;
+    }
+    &__name{
+        font-size: 50px;
+    }
 }
