--- a/src/pages/Name/Name.scss
+++ b/src/pages/Name/Name.scss
@@ -5,9 +5,9 @@
     background-color: #f57f5b;
     width: 100%;
     height: 100vh;
-    @include tablet{
-        padding: 0 12rem;
-    }
+    // @include tablet{
+    //     padding: 0 12rem;
+    // }
     &__question{
         color:black;
         padding-top: 0.5rem;
@@ -15,7 +15,7 @@
         font-family: "Galano Grotesque";
     }
     &__input{
-        width: 100%;
+        width: 18rem;
         height: 2.6875rem;
         border-radius: 10px;
         border: none;
@@ -27,24 +27,32 @@
         height: 85px;
         object-fit: contain;
     }
+    &__button{
+        height: 2.6875rem;
+        background-color: #035c88;
+        color: white;
+        font-weight: 700;
+        width: 18rem;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    }
+    &__title{
+        display: flex;
+        justify-content: center;
+    }
+    &__form-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 header{
     display: flex;
     justify-content: center;
 }
-
-.name__button{
-    height: 2.6875rem;
-    background-color: #035c88;
-    color: white;
-    font-weight: 700;
-    margin-left: 14rem;
-    width: 4.125rem;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-}
 .next{
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 10px;
+    right: 9px;
 }
