--- a/src/pages/SignIn/SignIn.scss
+++ b/src/pages/SignIn/SignIn.scss
@@ -4,17 +4,12 @@
     background-color: #f57f5b;
     width: 100%;
     height: 100vh;
-    @include tablet{
-        padding: 0 7rem;
-    }
-    @include desktop{
-        padding: 0 30rem;
-    }
     &__card{
         border: 1px solid #035c88;
         background-color: white;
         max-width: none;
-        width: 100%;
+        width: 18rem;
+        height: 21.875rem;
     }
     &__title{
         display: flex;
@@ -59,6 +54,11 @@
     }
     &__login{
         color: black;
+        margin-left: .75rem;
+    }
+    &__card-container{
+        display: flex;
+        justify-content: center;
     }
 }
 #email,
