--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -26,15 +26,15 @@
     align-items: center;
 }
 &__button{
- margin-top: 100px;
- width: 100%;
- height: 40px;
- font-size: 17px;
- border-radius: 25px;
- border: 2px solid #035c88;
- color: #ec6408;
- background-color: white;
- font-family: "Alegreya Sans SC";
+    margin-top: 100px;
+    width: 100%;
+    height: 40px;
+    font-size: 17px;
+    border-radius: 25px;
+    border: 2px solid #035c88;
+    color: #ec6408;
+    background-color: white;
+    font-family: "Alegreya Sans SC";
 }
 &__sub-title{
     padding:0 1rem;
@@ -53,6 +53,7 @@
     width: 11.5rem;
     margin-right: 2rem;
     margin-top: 3rem;
+    overflow: hidden;
 }
 &__visuals{
     border-radius: 1.5rem;
@@ -79,12 +80,14 @@
 }
 .card__mobile-container{
     display: flex;
+    overflow-x: hidden;
+    height: 20rem;
 }
 .row{
 &__one{
     display: flex;
     animation: slide 25s linear infinite;
-    white-space: nowrap;
+    // white-space: nowrap;
 }
 }
 
@@ -104,6 +107,3 @@
     height: 18.375rem;
     padding: 1rem;
 }
-.card__container {
-    overflow: hidden;
-  }
