--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -15,7 +15,7 @@
     &__button{
         border: none;
         width: 18rem;
-        margin-top: .625rem;
+        margin-top: 4rem;
         height: 37px;
         border-radius: 19px;
         background-color: #035c88;
@@ -24,5 +24,11 @@
     }
     &__name{
         font-size: 50px;
+    }
+    &__container{
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
     }
 }
