--- a/src/pages/Onboarding/Onboarding.scss
+++ b/src/pages/Onboarding/Onboarding.scss
@@ -4,7 +4,6 @@ video {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    // opacity: 0.7;
 }
 
 .onborading{
@@ -38,6 +37,12 @@ video {
     color: #ec6408;
     background-color: white;
     font-family: "Alegreya Sans SC";
+}
+&__image{
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    opacity: 0.7;
 }
 }
 
