--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,4 @@
-
+@use '../../styles/partials/mixins' as *;
 
 .home{
     width: 100%;
@@ -9,6 +9,9 @@
     font-size: 50px;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
+    @include tablet{
+        font-size: 76px;
+    }
 }
 &__header{
     background-color: #ec6408;
@@ -16,6 +19,9 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
     height: 18.375rem;
     padding: 0 0.7rem;
+    @include tablet{
+        padding: 0 2rem;
+    }
 }
 &__logo{
     height: 85px;
@@ -24,6 +30,10 @@
 &__title-section{
     display: flex;
     align-items: center;
+    @include tablet{
+        justify-content: center;
+        align-items: center;
+    }
 }
 &__button{
     margin-top: 100px;
@@ -35,9 +45,19 @@
     color: #ec6408;
     background-color: white;
     font-family: "Alegreya Sans SC";
+    width: 18rem;
 }
 &__sub-title{
     padding:0 1rem;
+    @include tablet{
+        padding: 0 2rem;
+        font-size: 30px;
+    }
+}
+&__text{
+    @include tablet{
+        font-size: 35px;
+    }
 }
 }
 .card{
@@ -83,22 +103,22 @@
     overflow-x: hidden;
     height: 20rem;
 }
-.row{
-&__one{
+.row__one{
     display: flex;
     animation: slide 25s linear infinite;
-    // white-space: nowrap;
-}
+    @include tablet{
+        animation: none;
+    }
 }
 
 @keyframes slide {
     from {
-      transform: translateX(0%);
+        transform: translateX(0%);
     }
     to {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
     }
-  }
+}
 
 .button-section{
     background-color: #035c88;
@@ -106,4 +126,7 @@
     clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
     height: 18.375rem;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
